# cn001-sn001-firmware

./: .gitignore  CMakeLists.txt  README.md  RISK-ISSUE.md  cppcheck.conf  flash.sh  platformio.ini  sdkconfig  sdkconfig.old
.github/workflows/: CN001-SN001-BUILD.yml  deploy_build.yml  test.yml
docs/: README copy 2.md  README copy.md
include/: bms.h  cli_th.h  cmd.h  config.h  err_handle.h  hash_cache.h  https_comms.h  hw.h  init.h  interrupts.h  main_app.h  msg_queue.h  mutex_h.h  pack_def.h  queue_m.h  rs485_interface.h  th_handler.h  types.h  utils.h
includes/: cli.h
main/: CMakeLists.txt
main/include/: BatteryPacket.hpp  CLI.hpp  Communication.hpp  Config.hpp  EEPROMConfig.hpp  IPacket.hpp  Node.hpp  UARTConsole.hpp
main/include/packet/: ActivatePacket.hpp  IPacket.hpp  ReadingPacket.hpp
main/src/: ActivatePacket.cpp  BatteryPacket.cpp  CLI.cpp  Communication.cpp  EEPROMConfig.cpp  EthernetConnection.cpp  IPacket.cpp  Node.cpp  ReadingPacket.cpp  SimConnection.cpp  WiFiConnection.cpp  main.cpp
src/: assm.S  bms.cpp  cli.cpp  cli_data.cpp  cli_th.cpp  cmd.cpp  hash_cache.cpp  https_comms.cpp  hw.cpp  init.cpp  interrupts.cpp  lora_listener.cpp  main.cpp  main_app.cpp  msg_queue.cpp  mutex_h.cpp  pack_def.cpp  rs485_interface.cpp  th_handler.cpp  utils.cpp
src/cli/: cli.cpp
src/cmd/: cmd.cpp  cmd.h
src/crc/: crc.cpp  crc.h
src/crypt/: crypt.h
src/http/: https_comms.cpp
src/lora/: lora_listener.cpp
src/main_app/: main_app.cpp  main_app.h
src/mh/: mutex_h.cpp  mutex_h.h
src/ntp/: ntp.cpp  ntp.h
src/pack_def/: pack_def.cpp
(+2 files in other folders)
